fixed overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,14 +4,14 @@ body {
     padding: 0;
     background-color: white; /* Default background for light mode */
     color: black; /* Default text color for light mode */
-    overflow: hidden;
+    overflow: scroll;
 }
 
 header, footer {
     background-color: transparent;
     color: #fff;
     text-align: center;
-    padding: 1em 0;
+    padding: 0rem;
     position: relative;
 }
 
@@ -28,7 +28,7 @@ header::before, footer::before {
 }
 
 main {
-    padding: 1em;
+    padding: 6px;
 }
 
 button {
